--- a/src/setting/static/view.html
+++ b/src/setting/static/view.html
@@ -105,7 +105,7 @@
     </setting-panel>
 </setting-section>
 
-
+<!-- 
 <setting-section data-title="关于" class="about">
     <setting-panel>
         <setting-list data-direction="column">
@@ -155,7 +155,7 @@
                 <setting-button data-type="secondary" class="channel">进去瞅瞅</setting-button>
             </setting-item>
         </setting-list>
-    </setting-panel>
+    </setting-panel> -->
     <setting-panel>
         <setting-list data-direction="column">
             <setting-item>
